# libPSI

./: .gitignore  CMakeLists.txt  CMakePresets.json  ExternalDependancies.props  LICENSE  README.md  bchParam.txt  build.py  copySourceToLinux.ps1  debug.mak  e.txt  file.txt  libPSI.sln  makefile  release.mak  stashSize_2hash.txt
frontend/: CLP.cpp  CLP.h  CMakeLists.txt  DrrnPSIMain.cpp  DrrnPSIMain.h  OtBinMain.cpp  OtBinMain.h  UnitTests.cpp  UnitTests.h  binningExp.cpp  binningExp.h  bloomFilterMain.cpp  bloomFilterMain.h  cuckooTest.cpp  dcwMain.cpp  dcwMain.h  dktMain.cpp  dktMain.h  ecdhMain.cpp  ecdhMain.h  fileBasedPSI.cpp  frontend.vcxproj  frontend.vcxproj.filters  main.cpp  miraclTest.cpp  signalHandle.cpp  stashSizes.txt  util.cpp  util.h
frontend/cuckoo/: CuckooIndex2.cpp  CuckooIndex2.h  SimpleCuckoo.cpp  SimpleCuckoo.h  bounds.xlsx  bounds2.xlsx  cuckooTests.cpp  cuckooTests.h  stashSize_2h.txt
frontend/cuckoo/encrypto/common/: hash_table_entry.cpp  hash_table_entry.h  hashing.cpp  hashing.h  util.h
frontend/cuckoo/encrypto/cuckoo_hashing/: cuckoo_hashing.cpp  cuckoo_hashing.h
libPSI/: CMakeLists.txt  Version.cpp  Version.h  config.h  config.h.in  libPSI.vcxproj  libPSI.vcxproj.filters
libPSI/Common/: ArrayView.h  BitIterator.cpp  BitIterator.h  BitVector.cpp  BitVector.h  ByteStream.cpp  ByteStream.h  Defines.cpp  Defines.h  Exceptions.h  Log.cpp  Log.h  MatrixView.h  Timer.cpp  Timer.h  mpsc_queue.h
libPSI/Crypto/: AES.cpp  AES.h  Commit.h  Curve.cpp  Curve.h  PRF.h  PRNG.cpp  PRNG.h  ShamirSSScheme.cpp  ShamirSSScheme.h  Zq.h  sha.cpp  sha1.h
libPSI/MPSI/: AknBfMPsiReceiver.cpp  AknBfMPsiReceiver.h  AknBfMPsiSender.cpp  AknBfMPsiSender.h
libPSI/MPSI/Beta/: CuckooHasher.cpp  CuckooHasher.h  OtBinMPsiReceiver.cpp  OtBinMPsiReceiver.h  OtBinMPsiSender.cpp  OtBinMPsiSender.h  SimpleHasher.cpp  SimpleHasher.h
libPSI/MPSI/DKT/: DktMPsiReceiver.cpp  DktMPsiReceiver.h  DktMPsiSender.cpp  DktMPsiSender.h
libPSI/MPSI/Dcw/: DcwBfPsiReceiver.cpp  DcwBfPsiReceiver.h  DcwBfPsiSender.cpp  DcwBfPsiSender.h  DcwRBfPsiReceiver.cpp  DcwRBfPsiReceiver.h  DcwRBfPsiSender.cpp  DcwRBfPsiSender.h  ShamirSSScheme.cpp  ShamirSSScheme.h
libPSI/MPSI/Grr18/: Grr18Common.cpp  Grr18Common.h  Grr18MPsiReceiver.cpp  Grr18MPsiReceiver.h  Grr18MPsiSender.cpp  Grr18MPsiSender.h  bayesian.gp  bayesian.ps1  bayesian2.gp  bayesian3.gp  output.txt
libPSI/MPSI/Rr16/: AknBfMPsiReceiver.cpp  AknBfMPsiReceiver.h  AknBfMPsiSender.cpp  AknBfMPsiSender.h
libPSI/MPSI/Rr17/: CuckooHasher.cpp  CuckooHasher.h  Rr17MPsiDefines.h
libPSI/MPSI/Rr17/Rr17a/: Rr17aMPsiReceiver.cpp  Rr17aMPsiReceiver.h  Rr17aMPsiSender.cpp  Rr17aMPsiSender.h
libPSI/MPSI/Rr17/Rr17b/: Rr17bMPsiReceiver.cpp  Rr17bMPsiReceiver.h  Rr17bMPsiSender.cpp  Rr17bMPsiSender.h
libPSI/Network/: BtAcceptor.cpp  BtAcceptor.h  BtChannel.cpp  BtChannel.h  BtEndpoint.cpp  BtEndpoint.h  BtIOService.cpp  BtIOService.h  BtSocket.h  Channel.cpp  Channel.h  Endpoint.h
libPSI/OT/: AknOtReceiver.cpp  AknOtReceiver.h  AknOtSender.cpp  AknOtSender.h  IknpOtExtReceiver.cpp  IknpOtExtReceiver.h  IknpOtExtSender.cpp  IknpOtExtSender.h  KosOtExtReceiver.cpp  KosOtExtReceiver.h  KosOtExtSender.cpp  KosOtExtSender.h  LzKosOtExtReceiver.cpp  LzKosOtExtReceiver.h  LzKosOtExtSender.cpp  LzKosOtExtSender.h  OTExtInterface.h
libPSI/OT/Base/: BaseOT.cpp  BaseOT.h  PvwBaseOT.cpp  PvwBaseOT.h  Tools.cpp  Tools.h  naor-pinkas.cpp  naor-pinkas.h  typedefs.h
libPSI/OT/Base/Math/: DMC.cpp  DMC.h  Zp_Data.cpp  Zp_Data.h  bigint.cpp  bigint.h  modp.cpp  modp.h
libPSI/OT/Base/crypto/: crypto.cpp  crypto.h  ecc-pk-crypto.cpp  ecc-pk-crypto.h  pk-crypto.h
libPSI/OT/NChooseK/: AknOtReceiver.cpp  AknOtReceiver.h  AknOtSender.cpp  AknOtSender.h
libPSI/OT/NChooseOne/: KkrtDefines.h  KkrtNcoOtReceiver.cpp  KkrtNcoOtReceiver.h  KkrtNcoOtSender.cpp  KkrtNcoOtSender.h  NcoOtExt.h
libPSI/OT/NChooseOne/Oos/: OosDefines.h  (+4 more)
libPSI/OT/Tools/: BchCode.cpp  BchCode.h  Tools.cpp  Tools.h  io.cpp  pinsketch.h  sketch.cpp
libPSI/OT/TwoChooseOne/: IknpOtExtReceiver.cpp  IknpOtExtReceiver.h  IknpOtExtSender.cpp  IknpOtExtSender.h  KosOtExtReceiver.cpp  KosOtExtReceiver.h  KosOtExtSender.cpp  KosOtExtSender.h  LzKosOtExtReceiver.cpp  LzKosOtExtReceiver.h  LzKosOtExtSender.cpp  LzKosOtExtSender.h  OTExtInterface.h
libPSI/PIR/: BgiPirClient.cpp  BgiPirClient.h  BgiPirServer.cpp  BgiPirServer.h
libPSI/PSI/: DrrnPsiClient.cpp  DrrnPsiClient.h  DrrnPsiServer.cpp  DrrnPsiServer.h  KeywordPsiClient.cpp  KeywordPsiClient.h  KeywordPsiServer.cpp  KeywordPsiServer.h  KkrtPsiReceiver.cpp  KkrtPsiReceiver.h  KkrtPsiSender.cpp  KkrtPsiSender.h
libPSI/PSI/Dcw/: DcwRBfPsiReceiver.cpp  DcwRBfPsiReceiver.h  DcwRBfPsiSender.cpp  DcwRBfPsiSender.h
libPSI/PSI/Drrn/: DrrnPsiClient.cpp  DrrnPsiClient.h  DrrnPsiServer.cpp  DrrnPsiServer.h
libPSI/PSI/ECDH/: EcdhPsiReceiver.cpp  EcdhPsiReceiver.h  EcdhPsiSender.cpp  EcdhPsiSender.h
libPSI/PSI/Kkrt/: KkrtPsiReceiver.cpp  KkrtPsiReceiver.h  KkrtPsiSender.cpp  KkrtPsiSender.h
libPSI/PSI/Prty/: PrtyDefines.h  PrtyReceiver.cpp  PrtyReceiver.h  PrtySender.cpp  PrtySender.h
libPSI/Tools/: BalancedIndex.cpp  BalancedIndex.h  CuckooHasher.cpp  CuckooHasher.h  CuckooIndex2.cpp  CuckooIndex2.h  RandomShuffle.cpp  RandomShuffle.h  SimpleHasher.cpp  SimpleHasher.h  SimpleIndex.cpp  SimpleIndex.h  fileBased.cpp  fileBased.h
libPSI_Tests/: AES_Tests.cpp  AES_Tests.h  AknBfPsi_Tests.cpp  AknBfPsi_Tests.h  AknOt_Tests.cpp  AknOt_Tests.h  BaseOT_Tests.cpp  BaseOT_Tests.h  BgiPirTests.cpp  BgiPirTests.h  BinOtPsi_Tests.cpp  BinOtPsi_Tests.h  BtChannel_Tests.cpp  BtChannel_Tests.h  CMakeLists.txt  Common.cpp  Common.h  DcwBfPsi_Tests.cpp  DcwBfPsi_Tests.h  DktMPsi_Tests.cpp  DktMPsi_Tests.h  DrrnPsi_Tests.cpp  DrrnPsi_Tests.h  Ecc_Tests.cpp  Ecc_Tests.h  EcdhPsi_Tests.cpp  EcdhPsi_Tests.h  FileBase_Tests.cpp  FileBase_Tests.h  Grr18MPSI_Tests.cpp  Grr18MPSI_Tests.h  KeywordPSI_Tests.cpp  KeywordPsi_Tests.h  NcoOT_Tests.cpp  NcoOT_Tests.h  OTOracleReceiver.cpp  OTOracleReceiver.h  OTOracleSender.cpp  OTOracleSender.h  OT_Tests.cpp  (+9 more)
(+45 files in other folders)
